--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.container{
+    display: flex;
+    /*flex-direction: column;
+    align-items: center;
+    justify-content: center;*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cardContainer{
+    flex-direction: column;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title{
+    font-family: Avenir;
+    font-size: xxx-large;
+    color: #0D0D0D;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text{
+    font-family: Avenir;
+    color: #4B5563;
+    font-size: medium;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.noGraphText{
+    font-family: Avenir;
+    color: #4B5563;
+    font-size: medium;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputContainer {
+    margin-top: 30px;
+}
+
+.input{
+    margin-top: 8px;
+}
+
+.plot {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-top: 50px;
 }
