Redirect to map page on click, add top border to sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,7 @@ html, body, #root, #root>div {
     font-family: Inter;
     font-size: 14px;
 }
+
+.sidebar-inner {
+    border-top: 1px solid #efefef;
+}
